--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -20,6 +20,16 @@
         border-radius: 5px;
     }
 
+    .messages-list {
+        padding-left: 0;
+    }
+
+    .sent {
+        background-color: #00FF00;
+    }
+
 
 
 </style>
+
+{% endblock styles %}
