feat: ai messages start from left

--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -28,6 +28,12 @@
         background-color: #00FF00;
     }
 
+    .received {
+        background-color: #FFFFFF;
+        align-self: flex-start;
+
+    }
+
 
 
 </style>
