--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -12,7 +12,7 @@
     }
 
     .message {
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
 
     .message-text {
@@ -34,8 +34,26 @@
 
     }
 
+    .message-form {
+        display: flex;
+        position: fixed;
+        bottom:0;
+        left: 0;
+        right: 0;
+        padding: 10px;
+        background-color: black;
+    }
 
+    .message-input {
+        flex: 1;
+        border-radius: 0;
+    }
 
+    .chat-container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 </style>
 
 {% endblock styles %}
