--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -60,5 +60,8 @@
 
 {% block content %}
 <div class="chat-container">
-    <div class="card flex-grow-1"
+    <div class="card flex-grow-1">
+
+    </div>
 </div>
+{% endblock content %}
