feat: added chatbox

--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -59,8 +59,10 @@
 {% endblock styles %}
 
 {% block content %}
+
 <div class="chat-container">
     <div class="card flex-grow-1">
+        <div class="card-header bg-primary text-white">Chat</div>
 
     </div>
 </div>
