fix: sent text blue similar to ios

--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -18,13 +18,13 @@
         padding: 10px;
         border-radius: 5px;
     }
-
+  
     .messages-list {
         padding-left: 0;
     }
 
     .sent {
-        background-color: #00FF00;
+        background-color: #2600ff;
     }
 
     .received {
