feat: added query selectors for messages

--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -91,5 +91,13 @@
     </div>
   </form>
 </div>
+<script>
+
+  const msgList = document.querySelector('.messages-list');
+  const msgForm = document.querySelector('.messages-list');
+  const msgInput = document.querySelector('.messages-list');
+
+</script>
+
 
 {% endblock %}
