feat: no refresh on send, ignore empty message

--- a/aibot/templates/chatbot.html
+++ b/aibot/templates/chatbot.html
@@ -97,6 +97,19 @@
   const msgForm = document.querySelector('.messages-list');
   const msgInput = document.querySelector('.messages-list');
 
+  msgForm.addEventListener('Send', (event) => {
+    event.preventDefault();
+
+    const message = msgInput.value.trim();
+    if (message.length === 0){
+      return;
+    }
+
+    
+
+  
+
+  
 </script>
 
 
